Hotfix: redirect to Subjects instead of Give page on download
Also disable Donate form on Give page

--- a/src/app/pages/give/give.hbs
+++ b/src/app/pages/give/give.hbs
@@ -5,11 +5,12 @@
         <div class="boxed">
             <h1>Help Us Make More Free Books!</h1>
             <p>
-                Like having a textbook for free? Your donation helps us provide access
-                to free textbooks for more students like you.
+                We regret that our donation site is unavailable this week.
+                <!--Like having a textbook for free? Your donation helps us provide access
+                to free textbooks for more students like you.-->
             </p>
             <div class="amount-boxes">
-                <form method="post" action="https://ebank.rice.edu/C21279_upay/web/index.jsp">
+                <!--form method="post" action="https://ebank.rice.edu/C21279_upay/web/index.jsp">
                     <input name="AMT" type="hidden" />
                     <input name="SUCCESS_LINK" type="hidden" value="{{thankYouUrl}}" />
                     <input type="hidden" name="UPAY_SITE_ID" value="106" />
@@ -22,7 +23,7 @@
                         <input type="number" class="amount-input" placeholder="Other amount" min="5" />
                     </div>
                     <input class="btn" type="submit" value="donate!" />
-                </form>
+                </form-->
             </div>
         </div>
     </div>
