Remove extra fetch from Partners page
Use `allies` data that comes with pageData to populate `allPartners`
Fix in-page scrolling:
- account for header
- use animated scrolling
- replace state rather than accumulating history
Also: remove links to foundations from Foundation page

--- a/src/app/pages/foundation/foundation.html
+++ b/src/app/pages/foundation/foundation.html
@@ -11,7 +11,7 @@
         <div class="container">
             <div class="funder" each="funder in model.funders">
                 <div class="logo">
-                  <a href="{funder.link}"><img src="{funder.funder_logo}"></a>
+                  <img src="{funder.funder_logo}">
                 </div>
                 <div class="text">
                     <h2>{funder.title}</h2>
