--- a/src/app/components/shell/header/header.html
+++ b/src/app/components/shell/header/header.html
@@ -7,7 +7,7 @@
         <div class="container">
             <ul class="nav-menu meta-menu no-bullets" role="menu" aria-label="Meta navigation menu">
                 <li class="nav-menu-item"><a href="/about" role="menuitem">About Us</a></li>
-                <li class="nav-menu-item"><a href="/blog" role="menuitem">Blog</a></li>
+                <!--<li class="nav-menu-item"><a href="/blog" role="menuitem">Blog</a></li>-->
                 <li class="nav-menu-item"><a href="/give" role="menuitem">Give</a></li>
                 <li class="nav-menu-item"><a href="/contact" role="menuitem">Contact</a></li>
                 <li class="nav-menu-item"><a href="/support" role="menuitem">Support</a></li>
