Fix No Limits text and adjust Give field values

--- a/src/app/pages/home/education/education.scss
+++ b/src/app/pages/home/education/education.scss
@@ -57,7 +57,7 @@
             width: calc(100% - 3rem);
 
             > p {
-                width: calc(90% - 26rem);
+                width: calc(46% + 10rem);
             }
         }
 
