Set Education banner links from CMS data

--- a/src/app/pages/home/education/education.html
+++ b/src/app/pages/home/education/education.html
@@ -10,13 +10,13 @@
         <div class="links">
             <ul>
                 <li>
-                    <a class="btn btn-large btn-orange higher-ed" href="/higher-ed#getting-started">
+                    <a class="btn btn-large btn-orange higher-ed" href="{model[1].link}">
                         <span class="title">{model[1].heading}</span>
                         <span class="blurb" data-html-content="1" skip="true"></span>
                     </a>
                 </li>
                 <li>
-                    <a class="btn btn-large btn-gold k-12" href="/k-12">
+                    <a class="btn btn-large btn-gold k-12" href="{model[2].link}">
                         <span class="title">{model[2].heading}</span>
                         <span class="blurb" data-html-content="2" skip="true"></span>
                     </a>
