--- a/src/app/pages/adoption/adoption.html
+++ b/src/app/pages/adoption/adoption.html
@@ -142,7 +142,7 @@
                         social media, and/or emails?
                         <span class="invalid-message">{model.validationMessage('00NU00000055sq6')}</span>
                         <div skip="true"></div>
-                        <select name="00NU00000055sq6">
+                        <select name="00NU00000055sq6" required>
                             <option value="1">Yes</option>
                             <option value="0">No</option>
                         </select>
@@ -152,7 +152,7 @@
                         May we contact you about opportunities to participate in future pilots or research studies?
                         <span class="invalid-message">{model.validationMessage('00NU00000055sqB')}</span>
                         <div skip="true"></div>
-                        <select name="00NU00000055sqB">
+                        <select name="00NU00000055sqB" required>
                             <option value="1">Yes</option>
                             <option value="0">No</option>
                         </select>
