--- a/src/app/pages/subjects/subjects.html
+++ b/src/app/pages/subjects/subjects.html
@@ -6,7 +6,7 @@
         <div class="filter" skip="true"></div>
         <div class="container" skip="true"></div>
         <div class="feature-block">
-            <div class="container">
+            <div class="container" if="model.dev_standard_1_heading">
                 <h2>About Our Textbooks</h2>
                 <div class="blurb">
                     <h3 class="title">{model.dev_standard_1_heading}</h3>
