--- a/src/app/pages/impact/impact.scss
+++ b/src/app/pages/impact/impact.scss
@@ -56,30 +56,26 @@ $hero-break-width: 880px;
             background-position: 0 bottom;
             background-repeat: no-repeat;
             background-size: 100% auto;
+            bottom: 0;
             height: 100%;
+            left: -16rem;
             overflow: hidden;
             position: absolute;
-            top: 0;
             transition: All ease 0.2s;
-            width: 84rem;
-
-            @media screen and (max-width: $boxed-width) {
-                left: calc(-84rem + 70%);
-            }
+            width: calc(50rem + 30%);
 
             @media screen and (min-width: $boxed-width + 1) {
-                left: calc(50% - 84rem);
+                left: 0;
+                width: 86rem;
             }
 
             @include collapsed {
                 background-position: left 1.8rem;
                 background-size: contain;
                 bottom: 0;
-                height: 50%;
-                left: 0;
-                right: 0;
-                top: auto;
-                width: 38rem;
+                height: calc(30% + 34vw);
+                left: calc(10rem - 34%);
+                z-index: 1;
             }
         }
 
@@ -88,7 +84,7 @@ $hero-break-width: 880px;
             display: flex;
             justify-content: flex-end;
             padding: 4rem;
-            z-index: 1;
+            z-index: 2;
 
             @media screen and (min-width: $boxed-width + 1) {
                 padding-left: calc(-61rem + 55%);
@@ -97,7 +93,7 @@ $hero-break-width: 880px;
             @include collapsed {
                 background-color: color(green);
                 width: 100%;
-                z-index: auto;
+                z-index: 0;
             }
 
             .text-block {
