Fix Give page empty hidden field
Fix typo in model variable name.

--- a/src/app/pages/give/give.html
+++ b/src/app/pages/give/give.html
@@ -11,7 +11,7 @@
                 <input type="hidden" name="Revenue_Amount"  value="0" />
                 <input type="hidden" name="Revenue_Fund_ID"  value="" />
                 <input type="hidden" name="Donation_Fund_ID"  value="17616" />
-                <input type="hidden" name="Donation_Amount" value="{model.seletedAmount}">
+                <input type="hidden" name="Donation_Amount" value="{model.selectedAmount}">
                 <input type="hidden" name="Rice_Relate" value="Friend">
                 <input type="hidden" name="turn_email_off" value="yes">
                 <div class="labeled-inputs row top-of-form">
