--- a/src/app/pages/finish-profile/finish-profile.html
+++ b/src/app/pages/finish-profile/finish-profile.html
@@ -7,8 +7,12 @@
     </div>
     <img class="strips" src="/images/components/strips.svg" height="10" alt="" role="presentation">
     <div class="boxed">
+        <h2 if="!model.accountId">
+            Could not load user information
+        </h2>
         <form accept-charset="UTF-8"
-         action="https://www.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8" method="post" class="form">
+         action="https://www.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8" method="post"
+         class="form{model.accountId ? '' : ' hidden'}">
             <div>
                 <input name="utf8" type="hidden" value="✓">
                 <input type="hidden" name="oid" value="00DU0000000Kwch">
