Update accessibility statement

--- a/src/app/pages/accessibility-statement/accessibility-statement.html
+++ b/src/app/pages/accessibility-statement/accessibility-statement.html
@@ -8,42 +8,56 @@
 
     <h2>Web Accessibility</h2>
     <p>
-        Our goal is to ensure that all OpenStax websites and the “Web View”
+        Our goal is to ensure that all OpenStax websites and the web view
         versions of our learning materials follow accessible web design best
         practices, so that they will meet the W3C-WAI Web Content Accessibility
         Guidelines (WCAG) 2.0 at Level A and Section 508 of the Rehabilitation Act.
+        The WCAG 2.0 guidelines explain ways to make web content more accessible for
+        people with disabilities and more user-friendly for everyone.
+    </p>
+
+    <h2>Our progress</h2>
+    <p>
+        We're working hard to achieve our goal of Level A accessibility, but we
+        realize there are some areas that still need improving. Our developers
+        are actively working to resolve issues that may hinder accessibility
+        according to the guidelines we mentioned, including the way we handle
+        parsing, error identification, focus order, use of color, and sensory
+        characteristics.
     </p>
 
     <h2>Feedback</h2>
     <p>
         You can help us to meet our accessibility goals by letting us know about
-        your experience using OpenStax by emailing us at info@openstax.org.
+        your experience using OpenStax by emailing us at <a
+        href="mailto:support@openstax.org?Subject=Accessibility">support@openstax.org</a>
+        or calling us at (713) 348-5012.
     </p>
     <p>
         If you've encountered an accessibility problem with one of our websites
-        or the “Web View” version of one of our learning materials, please
-        provide the following information:
+        or the web view version of one of our learning materials, please provide
+        the following information:
+        <ul>
+            <li>A description of what happened.</li>
+            <li>Links to the web pages or the name of the web view material(s).</li>
+            <li>The name of your browser (e.g. Firefox 37, Safari 7, Chrome 42, etc.).
+                If possible, please also provide the version number.</li>
+            <li>The name of your operating system (e.g. Windows 7, iOS 6, Android 4.4,
+                etc.). If possible, please also provide the version number.</li>
+            <li>Any assistive technology that you are using (e.g. JAWS, VoiceOver,
+                Dragon, etc.).</li>
+        </ul>
     </p>
-    <ul>
-        <li>A description of what happened.</li>
-        <li>Links to the web pages or the name of the “Web View” material(s).</li>
-        <li>The name of your browser (e.g. Firefox 37, Safari 7, Chrome 42, etc.).
-            If possible, please also provide the version number.</li>
-        <li>The name of your operating system (e.g. Windows 7, iOS 6, Android 4.4,
-            etc.). If possible, please also provide the version number.</li>
-        <li>Any assistive technology that you are using (e.g. JAWS, VoiceOver,
-            Dragon, etc.).</li>
-    </ul>
-
     <h2>Interactive Simulations</h2>
     <p>
         Some learning materials include links to interactive simulations (e.g.
         PhET physics simulations developed by the University of Colorado). While
         simulations are more difficult to make accessible than more conventional
         static textbook content, an effort to improve the accessibility of many
-        PhET simulations is underway. As with any OpenStax feature, your feedback
-        about the accessibility of the PhET simulations is welcome at:
-        info@openstax.org.
+        PhET simulations is underway. As with any OpenStax feature, your
+        feedback about the accessibility of the PhET simulations is welcome at:
+        <a
+        href="mailto:support@openstax.org?Subject=Accessibility">support@openstax.org</a>.
     </p>
 
     <h2>User-Contributed Content</h2>
