--- a/src/app/components/shell/header/header.html
+++ b/src/app/components/shell/header/header.html
@@ -27,7 +27,7 @@
                                 Account Profile
                             </a>
                         </li>
-                        <li if="model.user && model.user.groups.includes('Faculty')" role="presentation">
+                        <li if="model.user && !model.user.groups.includes('Faculty')" role="presentation">
                             <a href="/faculty-verification" role="menuitem" tabindex="-1">
                                 Request instructor access
                             </a>
