Add sticky note

--- a/src/app/components/shell/header/header.html
+++ b/src/app/components/shell/header/header.html
@@ -3,6 +3,7 @@
         <a href="#maincontent">skip to main content</a>
     </div>
 
+    <sticky-note skip="true"></sticky-note>
     <nav class="meta-nav">
         <div class="container">
             <ul class="nav-menu meta-menu no-bullets" role="menu" aria-label="Meta navigation menu">
