--- a/src/app/pages/comp-copy/comp-copy.html
+++ b/src/app/pages/comp-copy/comp-copy.html
@@ -10,15 +10,13 @@
             and for less than $5 in the iBooks Store.
         </p>
     </div>
-
-
-    <form accept-charset="UTF-8" class="form"
+    <iframe name="form-response" id="form-response" src="" width="0" height="0"></iframe>
+    <form accept-charset="UTF-8" class="form" target="form-response"
      action="https://www.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8" method="post">
         <div class="text-content">
              <div>
                 <input name="utf8" type="hidden" value="✓">
                 <input type=hidden name="oid" value="00DU0000000Kwch">
-                <input type=hidden name="retURL" value="{`${window.location.origin}/confirmation?comp-copy`}">
                 <input type=hidden name="lead_source" value="Comp Request">
             </div>
 
