--- a/src/app/pages/contact/contact.html
+++ b/src/app/pages/contact/contact.html
@@ -9,9 +9,10 @@
         <img class="strips" src="/images/components/strips.svg" height="10" alt="" role="presentation">
         <div class="boxed">
             <div class="col">
-                <form class="form" action="https://www.salesforce.com/servlet/servlet.WebToCase?encoding=UTF-8" method="post">
+                <iframe name="form-response" id="form-response" src="" width="0" height="0"></iframe>
+                <form class="form" action="https://www.salesforce.com/servlet/servlet.WebToCase?encoding=UTF-8"
+                target="form-response" method="post">
                     <input type="hidden" name="orgid" value="00DU0000000Kwch">
-                    <input type="hidden" name="retURL" value="{`${window.location.origin}/confirmation?contact`}">
                     <input type="hidden" name="external" value="1">
                     <label>
                         What is your question about?
