--- a/src/app/pages/interest/interest.html
+++ b/src/app/pages/interest/interest.html
@@ -1,135 +1,138 @@
 <template args="model">
-    <div class="text-content subhead">
-    <h1>Interested in learning more about OpenStax?</h1>
-        <p>
-            Fill out the form below, and we’ll send you more information about giving your students access to peer-reviewed college textbooks, free of cost.
-        </p>
-        <p>Have you already adopted an OpenStax textbook? <a href="/adoption">Let us know!</a></p>
-    </div>
-
-    <form accept-charset="UTF-8" action="https://www.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8"
-     class="new_adoption_interest form" method="post">
-        <div class="text-content">
-            <div>
-                <input type="hidden" name="oid" value="00DU0000000Kwch">
-                <input type="hidden" name="retURL" value="{`${window.location.origin}/confirmation?interest`}">
-                <input type="hidden" name="lead_source" value="OS Interest Form">
-                <input type="hidden" name="00NU00000055spw" value="High Interest in Adopting">
-            </div>
-            <div class="labeled-inputs row top-of-form">
-                <div class="col">
-                    <label>
-                        First name
-                        <span class="invalid-message">{model.validationMessage('first_name')}</span>
-                        <input name="first_name" type="text" required>
-                    </label>
-                    <label>
-                        Last name
-                        <span class="invalid-message">{model.validationMessage('last_name')}</span>
-                        <input name="last_name" type="text" required>
-                    </label>
-                    <label>
-                        School name
-                        <span class="invalid-message">{model.validationMessage('company')}</span>
-                        <input name="company" type="text" required>
-                    </label>
-                </div>
-
-                <div class="col">
-                    <label>
-                        School url
-                        <span class="invalid-message">{model.validationMessage('URL')}</span>
-                        <input name="URL" type="text" required>
-                    </label>
-                    <label>
-                        Email address
-                        <span class="invalid-message">{model.validationMessage('email')}</span>
-                        <input name="email" type="email" required>
-                    </label>
-                    <label>
-                        Phone number
-                        <span class="invalid-message">{model.validationMessage('phone')}</span>
-                        <input name="phone" type="text" required>
-                    </label>
-                </div>
-            </div>
+    <if condition="model.submitted">
+        <h1>Sending...</h1>
+    <else>
+        <div class="text-content subhead">
+            <h1>Interested in learning more about OpenStax?</h1>
+            <p>
+                Fill out the form below, and we’ll send you more information about giving your students access to peer-reviewed college textbooks, free of cost.
+            </p>
+            <p>Have you already adopted an OpenStax textbook? <a href="/adoption">Let us know!</a></p>
         </div>
-
-        <div class="wrapper">
-            <img class="strips" src="/images/components/strips.svg" height="10" alt="" role="presentation">
-            <div class="text-content labeled-inputs row book-info">
-
-                <div class="col">
-                    <label>Which OpenStax textbook(s) are you interested in adopting?
-                        <span class="select-instructions">Select at least one.</span>
-                        <span class="invalid-message"><br />{model.validationMessage('00NU00000053nzR')}</span>
-                        <div skip="true"></div>
-                        <select name="00NU00000053nzR" multiple required>
-                            <option each="title in model.titles" value="{title.value}">{title.text}</option>
-                        </select>
-                    </label>
-
-                    <label>
-                        <span>How many students do you teach each semester?</span>
-                        <span class="invalid-message"><br />{model.validationMessage('00NU00000052VId')}</span>
-                        <input name="00NU00000052VId" type="number" min="0" required>
-                    </label>
-
-                    <label class="question">
-                        Which of our partners would you like to give permission to contact you about additional
-                        resources to support our books?
-                        <span class="select-instructions">You may select more than one.</span>
-                        <span class="invalid-message"><br />{model.validationMessage('00NU00000055spm')}</span>
-                        <div skip="true"></div>
-                        <select name="00NU00000055spm" multiple>
-                            <option value="Online homework providers">
-                                Online homework providers
-                            </option>
-                            <option value="Courseware providers">
-                                Courseware providers
-                            </option>
-                            <option value="Print custom editions">
-                                Print custom editions
-                            </option>
-                        </select>
-                    </label>
+        <iframe name="form-response" id="form-response" src="" width="0" height="0"></iframe>
+        <form accept-charset="UTF-8" action="https://www.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8"
+         target="form-response" class="new_adoption_interest form" method="post">
+            <div class="text-content">
+                <div>
+                    <input type="hidden" name="oid" value="00DU0000000Kwch">
+                    <input type="hidden" name="lead_source" value="OS Interest Form">
+                    <input type="hidden" name="00NU00000055spw" value="High Interest in Adopting">
                 </div>
+                <div class="labeled-inputs row top-of-form">
+                    <div class="col">
+                        <label>
+                            First name
+                            <span class="invalid-message">{model.validationMessage('first_name')}</span>
+                            <input name="first_name" type="text" required>
+                        </label>
+                        <label>
+                            Last name
+                            <span class="invalid-message">{model.validationMessage('last_name')}</span>
+                            <input name="last_name" type="text" required>
+                        </label>
+                        <label>
+                            School name
+                            <span class="invalid-message">{model.validationMessage('company')}</span>
+                            <input name="company" type="text" required>
+                        </label>
+                    </div>
 
-                <div class="col">
-
-                    <label class="question">How did you hear about OpenStax?
-                        <span class="select-instructions">Select at least one.</span>
-                        <span class="invalid-message"><br />{model.validationMessage('00NU00000055spr')}</span>
-                        <div skip="true"></div>
-                        <select name="00NU00000055spr" multiple required>
-                            <option value="Web search">Web search</option>
-                            <option value="Colleague">Colleague</option>
-                            <option value="Conference">Conference</option>
-                            <option value="Email">Email</option>
-                            <option value="Facebook">Facebook</option>
-                            <option value="Twitter">Twitter</option>
-                            <option value="Webinar">Webinar</option>
-                            <option value="Partner organization">Partner organization</option>
-                            <option value="" data-other="other-source">Other (specify below)</option>
-                        </select>
-                    </label>
-
-                    <label id="other-source" class="hidden">
-                        Other:
-                        <input name="00NU00000055spr" type="text"
-                        placeholder="Heard about us some other way?">
-                    </label>
-
-                    <label>
-                        Do you have any feedback you'd like to share with us?
-                        <textarea cols="50" name="00NU00000056Rls" rows="4"></textarea>
-                    </label>
-
-                    <div class="cta">
-                        <input name="commit" class="btn" type="submit" value="Submit" role="button" aria-disabled="false">
+                    <div class="col">
+                        <label>
+                            School url
+                            <span class="invalid-message">{model.validationMessage('URL')}</span>
+                            <input name="URL" type="text" required>
+                        </label>
+                        <label>
+                            Email address
+                            <span class="invalid-message">{model.validationMessage('email')}</span>
+                            <input name="email" type="email" required>
+                        </label>
+                        <label>
+                            Phone number
+                            <span class="invalid-message">{model.validationMessage('phone')}</span>
+                            <input name="phone" type="text" required>
+                        </label>
                     </div>
                 </div>
             </div>
-        </div>
-    </form>
+
+            <div class="wrapper">
+                <img class="strips" src="/images/components/strips.svg" height="10" alt="" role="presentation">
+                <div class="text-content labeled-inputs row book-info">
+
+                    <div class="col">
+                        <label>Which OpenStax textbook(s) are you interested in adopting?
+                            <span class="select-instructions">Select at least one.</span>
+                            <span class="invalid-message"><br />{model.validationMessage('00NU00000053nzR')}</span>
+                            <div skip="true"></div>
+                            <select name="00NU00000053nzR" multiple required>
+                                <option each="title in model.titles" value="{title.value}">{title.text}</option>
+                            </select>
+                        </label>
+
+                        <label>
+                            <span>How many students do you teach each semester?</span>
+                            <span class="invalid-message"><br />{model.validationMessage('00NU00000052VId')}</span>
+                            <input name="00NU00000052VId" type="number" min="0" required>
+                        </label>
+
+                        <label class="question">
+                            Which of our partners would you like to give permission to contact you about additional
+                            resources to support our books?
+                            <span class="select-instructions">You may select more than one.</span>
+                            <span class="invalid-message"><br />{model.validationMessage('00NU00000055spm')}</span>
+                            <div skip="true"></div>
+                            <select name="00NU00000055spm" multiple>
+                                <option value="Online homework providers">
+                                    Online homework providers
+                                </option>
+                                <option value="Courseware providers">
+                                    Courseware providers
+                                </option>
+                                <option value="Print custom editions">
+                                    Print custom editions
+                                </option>
+                            </select>
+                        </label>
+                    </div>
+
+                    <div class="col">
+
+                        <label class="question">How did you hear about OpenStax?
+                            <span class="select-instructions">Select at least one.</span>
+                            <span class="invalid-message"><br />{model.validationMessage('00NU00000055spr')}</span>
+                            <div skip="true"></div>
+                            <select name="00NU00000055spr" multiple required>
+                                <option value="Web search">Web search</option>
+                                <option value="Colleague">Colleague</option>
+                                <option value="Conference">Conference</option>
+                                <option value="Email">Email</option>
+                                <option value="Facebook">Facebook</option>
+                                <option value="Twitter">Twitter</option>
+                                <option value="Webinar">Webinar</option>
+                                <option value="Partner organization">Partner organization</option>
+                                <option value="" data-other="other-source">Other (specify below)</option>
+                            </select>
+                        </label>
+
+                        <label id="other-source" class="hidden">
+                            Other:
+                            <input name="00NU00000055spr" type="text"
+                            placeholder="Heard about us some other way?">
+                        </label>
+
+                        <label>
+                            Do you have any feedback you'd like to share with us?
+                            <textarea cols="50" name="00NU00000056Rls" rows="4"></textarea>
+                        </label>
+
+                        <div class="cta">
+                            <input name="commit" class="btn" type="submit" value="Submit" role="button" aria-disabled="false">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </if>
 </template>
