Add pop-up to Faculty confirmation

--- a/src/app/pages/confirmation/confirmation.html
+++ b/src/app/pages/confirmation/confirmation.html
@@ -1,4 +1,5 @@
 <template args="model">
+    <pop-up skip="true"></pop-up>
     <div class="page-intro">
         <div class="text-content subhead">
             <h1>{model.headline}</h1>
