--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -104,8 +104,7 @@ sup {
     display: none;
 }
 
-.no-scroll,
-.toc-overlay {
+.no-scroll {
     overflow: hidden;
 }
 
@@ -156,8 +155,8 @@ sup {
         padding-top: 11rem;
     }
 
-    .toc-overlay & {
-        z-index: 2;
+    &.with-overlay {
+        z-index: 1;
     }
 }
 
